# Agritech

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/plantapi/: manage.py  test_api.py
backend/plantapi/accounts/: views.py
backend/plantapi/chatbot/: admin.py  models.py  serializers.py  urls.py  views.py
backend/plantapi/classifier/: serializer.py  urls.py  views.py
backend/plantapi/plantapi/: asgi.py  settings.py  urls.py  wsgi.py
backend/plantapi/scans/: models.py  serializers.py  urls.py  views.py
backend2/: database.py  main.py  requirements.txt  user_guide.txt
backend2/core/: security.py
backend2/scan/: crud.py  models.py  routes.py  schemas.py
backend2/users/: crud.py  models.py  routes.py  schemas.py
frontend/: .gitignore  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx
frontend/app/auth/: index.tsx  login.tsx  sign.tsx
frontend/app/chatbot/: _layout.tsx  index.tsx
frontend/app/onboarding/: _layout.tsx  (+3 more)
frontend/components/: CustomButton.tsx  CustomHeader.tsx
frontend/services/: api.ts  types.ts
ml/agrichat/: .dockerignore  Dockerfile  app.py  config.py  rag_pipeline.py  requirements.txt  vectorstore.py
ml/classification/: Dockerfile  RAPPORT_TESTS.md  app.py  config.py  predict.py  rapport_classification.md  requirements.txt  tools.py  train.py  utils.py  vectorstore.py
ml/notebooks/: exploratory_data_analysis.ipynb  nettoyage.ipynb  normalisation.ipynb  preprocessing.ipynb  redimensionnement.ipynb
(+63 files in other folders)
