[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agritech_project"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "An agricultural advisory system with ML models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "ml*"]
exclude = ["tests*"]
namespaces = false
